bench: add listOfValueClass to prove generics-boxing penalty
List<SwissValorNumber> allocates 28 040 B/op vs 8 016 B/op for a typed
array — 3.5× overhead from erasing flat layout through generic erasure.
README construction table updated with the new variant and measured numbers.